--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -5,7 +5,23 @@ html(lang="ko")
     link(rel="stylesheet", href="/static/css/styles.css")
   body
     header
-      h1 DJ.Run
+      h1 DJ.Run - #{title}
+      nav
+        ul
+          li
+            a(href="/") 홈
+          if isLoggedIn
+            li
+              a(href="/account") #{loggedInUser.username}
+            li
+              a(href="/logout") 로그아웃
+
+          else
+            li
+              a(href="/signup") 가입하기
+            li
+              a(href="/login") 로그인하기
+
     block content
     footer
       p Copyright &copy; 2023 김형우
