--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -7,5 +7,7 @@ block content
     input(name="email" type="email" placeholder="이메일 주소" required )
     input(name="password" type="password" placeholder="비밀번호" required )
     input(type="submit", value="로그인하기")
+  br
+  a(href=`/kakao/login`) 카카오 로그인
   div 계정이 없나요? 
     a(href="/signup") DJ.Run에 가입하기
