--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -2,4 +2,75 @@
 
 body {
   background-color: $bg;
+  color: #e1e1e1;
+}
+
+main {
+  display: flex;
+}
+
+.player-container {
+  height: 50%;
+  width: 50%;
+  background-color: #121212;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
+#track-list {
+  margin: 0px;
+}
+
+#player {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
+
+  .player-title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-top: 1rem;
+  }
+
+  .player-artist {
+    font-size: 16px;
+  }
+}
+
+#player-button {
+  display: flex;
+  div {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+  }
+  .play-btn {
+    background-color: #e1e1e1;
+    color: #121212;
+  }
+}
+
+li:first-child {
+  background-color: #343434;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  background-color: #121212;
+  color: #e1e1e1;
+  margin-bottom: 1rem;
+  .track-container {
+    margin-left: 1rem;
+    width: 90%;
+  }
 }
