--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -13,6 +13,8 @@ html(lang="ko")
           if isLoggedIn
             li
               a(href="/account") #{loggedInUser.username}
+            li 
+              a(href="/track/upload") 트랙 등록하기
             li
               a(href="/logout") 로그아웃
 
@@ -21,8 +23,8 @@ html(lang="ko")
               a(href="/signup") 가입하기
             li
               a(href="/login") 로그인하기
-
-    block content
+    main
+      block content
     footer
       p Copyright &copy; 2023 김형우
     script(src="/static/js/main.js")
