fix: Modify track upload feature due to file upload middleware addition

--- a/src/views/uploadTrack.pug
+++ b/src/views/uploadTrack.pug
@@ -3,7 +3,11 @@ extends layout.pug
 block content
   if errorMessage
     spna=errorMessage
-  form(method="POST")
+  form(method="POST" enctype="multipart/form-data")
+    label(for="trackFile") Track
+    br
+    input(type="file", id="trackFile", name="trackFile", accept=".mp3" required)
+    br
     input(name="name" type="text" placeholder="트랙 제목을 입력하세요." minlength=1 maxlength=50 required )
     input(name="artists" type="text" placeholder="아티스트 이름을 입력하세요" minlength=1 maxlength=50 required )
     input(type="submit", value="트랙 등록하기")
