--- a/src/views/signup.pug
+++ b/src/views/signup.pug
@@ -6,6 +6,7 @@ block content
   form(method="POST")
     input(name="email" type="email" placeholder="이메일을 입력하세요." required )
     input(name="username" type="text" placeholder="사용자 이름을 입력하세요" required )
+    input(name="profileName" type="text" placeholder="프로필 이름을 입력하세요" required )
     input(name="password" type="password" placeholder="비밀번호를 만드세요." required )
     input(name="confirmPassword" type="password" placeholder="비밀번호를 다시 입력하세요." required )
     input(type="submit", value="가입하기")
