--- a/src/views/uploadTrack.pug
+++ b/src/views/uploadTrack.pug
@@ -8,6 +8,7 @@ block content
     br
     input(type="file", id="trackFile", name="trackFile", accept=".mp3" required)
     br
-    input(name="name" type="text" placeholder="트랙 제목을 입력하세요." minlength=1 maxlength=50 required )
+    input(name="name" type="text" placeholder="곡 제목을 입력하세요." minlength=1 maxlength=50 required )
     input(name="artists" type="text" placeholder="아티스트 이름을 입력하세요" minlength=1 maxlength=50 required )
+    input(name="genres" type="text" placeholder="곡의 장르를 입력하세요" minlength=1 maxlength=50 required )
     input(type="submit", value="트랙 등록하기")
