--- a/src/views/signup.pug
+++ b/src/views/signup.pug
@@ -1,14 +1,34 @@
 extends layout.pug
 
 block content
-  if errorMessage
-    div=errorMessage
-  form(method="POST")
-    input(name="email" type="email" placeholder="이메일을 입력하세요." required )
-    input(name="username" type="text" placeholder="사용자 이름을 입력하세요" required )
-    input(name="profileName" type="text" placeholder="프로필 이름을 입력하세요" required )
-    input(name="password" type="password" placeholder="비밀번호를 만드세요." required )
-    input(name="confirmPassword" type="password" placeholder="비밀번호를 다시 입력하세요." required )
-    input(type="submit", value="가입하기")
-  div 계정이 있나요? 
-    a(href="/login") 로그인하세요.
+  
+  div(class="form-container")
+    if errorMessage
+      div(class="error_message")=errorMessage
+    form(method="POST")
+      div(class="form-input")
+        label(for="email") 이메일이 어떻게 되시나요? 
+        input(id="email" name="email" type="email" placeholder="이메일을 입력하세요." required )
+      
+      div(class="form-input")
+        label(for="username") 어떤 사용자 이름을 사용하시겠어요?
+        input(id="username" name="username" type="text" placeholder="사용자 이름을 입력하세요" required )
+        span 로그인에 사용되는 이름입니다.
+      
+      div(class="form-input")
+        label(for="profileName") 어떤 프로필 이름을 사용하시겠어요?
+        input(id="profileName" name="profileName" type="text" placeholder="프로필 이름을 입력하세요" required )
+        span 프로필에 표시되는 이름입니다.
+
+      div(class="form-input")
+        label(for="password") 비밀번호를 만드세요.
+        input(id="password" name="password" type="password" placeholder="비밀번호를 만드세요." required )
+      
+      div(class="form-input")
+        label(for="confirmPassword") 비밀번호를 확인하세요.
+        input(id="confirmPassword" name="confirmPassword" type="password" placeholder="비밀번호를 다시 입력하세요." required )
+      input(type="submit", value="가입하기")
+    
+    div(class="link-container") 
+      span 계정이 있나요? 
+      a(href="/login") 로그인하세요.
