feat: Add track chart feature

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "./layout.scss";
 @import "./form.scss";
 @import "./home.scss";
+@import "./chart.scss";
 @import url("//cdn.jsdelivr.net/gh/neodgm/neodgm-webfont@1.530/neodgm/style.css");
 .font-neodgm {
   font-family: "NeoDunggeunmo";
