--- a/src/client/scss/home.scss
+++ b/src/client/scss/home.scss
@@ -40,6 +40,7 @@
   display: flex;
   gap: $spacing-4;
   margin-bottom: $spacing-8;
+  overflow-x: scroll;
   .playlist_container {
     display: flex;
     flex-direction: column;
@@ -67,5 +68,20 @@
         font-size: $fontSize-0;
       }
     }
+  }
+}
+
+.genre_playlists {
+  display: flex;
+  gap: $spacing-6;
+  .genre_container {
+    width: 150px;
+    height: 150px;
+    min-width: 150px;
+    background-color: $color-gray;
+    border-radius: 5px;
+    padding: $spacing-4;
+    font-weight: $fontWeight-bold;
+    font-size: $fontSize-2;
   }
 }
