--- a/src/client/scss/layout.scss
+++ b/src/client/scss/layout.scss
@@ -250,7 +250,7 @@ main {
     $color-background-200
   );
   padding: $spacing-8;
-  height: 2000px;
+  height: 115vh;
   padding-left: 18rem;
   padding-top: 6rem;
 }
