fix: Add track image upload feature

--- a/src/views/uploadTrack.pug
+++ b/src/views/uploadTrack.pug
@@ -5,9 +5,11 @@ block content
     spna=errorMessage
   form(method="POST" enctype="multipart/form-data")
     label(for="trackFile") Track
-    br
     input(type="file", id="trackFile", name="trackFile", accept=".mp3" required)
-    br
+    
+    label(for="trackImageFile") image
+    input(type="file", id="trackImageFile", name="trackImageFile", accept=".png" required)
+
     input(name="name" type="text" placeholder="곡 제목을 입력하세요." minlength=1 maxlength=50 required )
     input(name="artists" type="text" placeholder="아티스트 이름을 입력하세요" minlength=1 maxlength=50 required )
     input(name="genres" type="text" placeholder="곡의 장르를 입력하세요" minlength=1 maxlength=50 required )
