--- a/src/client/scss/chart.scss
+++ b/src/client/scss/chart.scss
@@ -29,11 +29,14 @@
         display: flex;
         align-items: center;
         width: 300px;
+        img,
         .image {
           width: 50px;
           height: 50px;
-          background-color: $color-white;
           margin-right: $spacing-4;
+        }
+        .image {
+          background-color: $color-white;
         }
         .detail {
           display: flex;
