--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -23,13 +23,13 @@ html(lang="ko")
             i(class="fa-solid fa-bookmark")
             span  내 라이브러리
         div(class="navigation-loggedInUser_menu")
-          button(type="button") 
+          a(href="/playlist/running")
             i(class="fa-solid fa-person-running")
             span  러닝 플레이리스트 만들기
-          button(type="button") 
+          a(href="/playlist/common")
             i(class="fa-solid fa-plus")
             span  플레이리스트 만들기
-          button(type="button") 
+          a(href="/collection/tracks")
             i(class="fa-solid fa-heart")
             span  좋아요 표시한 곡
           
